# robabsmovmainfinal

./: .gitignore  README.md  absolute_move_algorithm.md  absolute_move_algorithm.md.resolved  implementation_plan.md.resolved  pipeline_algorithm.md  prompts.md  task.md.resolved  theory.md  walkthrough.md.resolved
src/turtlebot3_absolute_move/: package.xml  setup.cfg  setup.py
src/turtlebot3_absolute_move/config/: absolute_move.rviz  goals_example.yaml  goals_turtlebot3_world.yaml  params_hw.yaml  params_pipeline.yaml  params_sim.yaml  params_slam.yaml  params_slam_localization.yaml  pipeline.rviz
src/turtlebot3_absolute_move/launch/: hardware.launch.py  pipeline.launch.py  rviz.launch.py  simulation.launch.py
src/turtlebot3_absolute_move/turtlebot3_absolute_move/: __init__.py  absolute_move_client.py  absolute_move_node.py  frontier_explorer.py  goal_input.py  path_planner.py  pipeline_orchestrator.py  scan_relay.py
src/turtlebot3_absolute_move_interfaces/: CMakeLists.txt  package.xml
src/turtlebot3_absolute_move_interfaces/action/: AbsoluteMove.action
